Updated the resource system for Languages and Themes. Added versioning for Languages and Themes. Little refactoring.